<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/message_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/contact_img"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_margin="12dp"
        android:padding="4dp"
        android:src="@drawable/ic_contact"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/secure_mode_image"
        android:layout_width="48dp"
        android:layout_height="36dp"
        android:layout_margin="12dp"
        android:contentDescription="@string/shows_if_the_sms_channel_is_secure"
        android:padding="8dp"
        android:src="@drawable/ic_no_encryption_end_to_end"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/contact_img"
        app:layout_constraintStart_toStartOf="@+id/contact_img"
        app:layout_constraintTop_toBottomOf="@+id/contact_img" />

    <TextView
        android:id="@+id/contact_name_or_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:hint="@string/demo_name"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/contact_img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toEndOf="@+id/contact_img"
        app:layout_constraintTop_toTopOf="@+id/contact_img" />

    <TextView
        android:id="@+id/sms_extract"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:text="@string/demo_message"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toBottomOf="@+id/secure_mode_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toEndOf="@+id/secure_mode_image"
        app:layout_constraintTop_toTopOf="@+id/secure_mode_image" />

    <ImageView
        android:id="@+id/message_unread_icon"
        android:layout_width="8dp"
        android:layout_height="8dp"
        android:layout_margin="12dp"
        android:contentDescription="@string/a_dot_that_shows_if_message_was_read_or_not"
        android:src="@drawable/ic_read_status"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>