<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.dashboard.DashboardFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_X"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/dashboard"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:maxEms="15"
        android:text="@string/filter_sms_messages"
        app:layout_constraintBottom_toBottomOf="@+id/toggle_sms_filter"
        app:layout_constraintEnd_toStartOf="@+id/toggle_sms_filter"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/toggle_sms_filter" />

    <androidx.appcompat.widget.AppCompatToggleButton
        android:id="@+id/toggle_sms_filter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_X" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:maxEms="15"
        android:maxLines="2"
        android:text="@string/filter_sms_based_on_keywords_database"
        app:layout_constraintBottom_toBottomOf="@+id/toggle_rule_sms_filter"
        app:layout_constraintEnd_toStartOf="@+id/toggle_rule_sms_filter"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/toggle_rule_sms_filter" />

    <androidx.appcompat.widget.AppCompatToggleButton
        android:id="@+id/toggle_rule_sms_filter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toggle_sms_filter" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:maxEms="15"
        android:maxLines="2"
        android:text="@string/filter_sms_based_on_contacts"
        app:layout_constraintBottom_toBottomOf="@+id/toggle_contact_based_sms_filter"
        app:layout_constraintEnd_toStartOf="@+id/toggle_contact_based_sms_filter"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/toggle_contact_based_sms_filter" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxEms="15"
        android:maxLines="2"
        android:text="@string/cpu_intensive_filtering"
        android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Subtitle"
        android:textSize="11sp"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <androidx.appcompat.widget.AppCompatToggleButton
        android:id="@+id/toggle_contact_based_sms_filter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toggle_rule_sms_filter" />

    <com.airbnb.lottie.LottieAnimationView
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:alpha="0.2"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/toolbar_X"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/secure_loading"
        app:lottie_renderMode="hardware"
        app:lottie_speed="1" />

</androidx.constraintlayout.widget.ConstraintLayout>